--- a/vue/package.json
+++ b/vue/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "element-plus": "^2.13.2",
     "vue": "^3.5.27",
     "vue-router": "^5.0.1"
