--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -45,6 +45,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.25</version>
+        </dependency>
 
     </dependencies>
 
